feat: openapi generator configuration
