# src/main/resources/swagger/inditex-price-api.yaml
@@ -91,10 +91,17 @@ components:
       properties:
         errorCode:
           type: string
-          description: Error code
-        message:
+          enum:
+            - RESOURCE_NOT_FOUND
+            - INTERNAL_SERVER_ERROR
+            - UNPROCESSABLE_REQUEST
+          description: Type of the error
+        errorMessage:
           type: string
-          description: Error message
+          description: Detailed error message
+        status:
+          type: string
+          description: HTTP status code associated with the error
         path:
           type: string
           description: Request path where the error occurred
